@@ -1,11 +1,11 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin json::write n 1.0.1]
-[copyright {2009-2011 Andreas Kupries <andreas_kupries@sourceforge.net>}]
+[manpage_begin json::write n 1.0.2]
+[copyright {2009-2013 Andreas Kupries <andreas_kupries@sourceforge.net>}]
 [moddesc   {JSON}]
 [titledesc {JSON generation}]
 [category  {CGI programming}]
 [require Tcl 8.5]
-[require json::write [opt 1.0.1]]
+[require json::write [opt 1.0.2]]
 [keywords json javascript {data exchange} {exchange format}]
 [description]
 [para]
